base/applications/dbeaver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dbeaver
  namespace: dbeaver
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    # whitelist IPs:
    # nginx.ingress.kubernetes.io/whitelist-source-range: ""

spec:
  ingressClassName: nginx
  tls:
    - secretName: dbeaver-tls
      hosts:
        - dbeaver.local.com.br

  rules:
    - host: dbeaver.local.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dbeaver
                port:
                  name: client
